:sparkles: feat: whiteboard is now working, along the 'change size' button and opacity slider

--- a/style.css
+++ b/style.css
@@ -30,9 +30,11 @@ body {
     height: 603px;
     display: flex;
     flex-wrap: wrap;
+    align-items: stretch;
 }
 
-#container > div {
-    min-width: 149px;
-    min-height: 149px;
+.colorbox{
+    box-sizing: border-box;
 }
+
+
